--- a/404.html
+++ b/404.html
@@ -18,9 +18,9 @@
     <meta property="og:url" content="https://startups.courses/">
     <meta property="og:description" content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
     <meta property="og:site_name" content="OneUp">
-    <link href="//mastersubhajit1.github.io/assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="//mastersubhajit1.github.io/assets/img/favicon.png" rel="apple-touch-icon" />
-    <link rel="mask-icon" href="//mastersubhajit1.github.io/assets/img/favicon.png" color="#ffffff">
+    <link href="https://mastersubhajit1.github.io/assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://mastersubhajit1.github.io/assets/img/favicon.png" rel="apple-touch-icon" />
+    <link rel="mask-icon" href="https://mastersubhajit1.github.io/assets/img/favicon.png" color="#ffffff">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <link type="text/css" href="css/all.min.css" rel="stylesheet">
