--- a/404.html
+++ b/404.html
@@ -18,9 +18,10 @@
     <meta property="og:url" content="https://startups.courses/">
     <meta property="og:description" content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
     <meta property="og:site_name" content="OneUp">
-    <link href="https://mastersubhajit1.github.io/assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://mastersubhajit1.github.io/assets/img/favicon.ico" rel="apple-touch-icon" />
-    <link rel="mask-icon" href="https://mastersubhajit1.github.io/assets/img/favicon.ico" color="#ffffff">
+    <link rel="apple-touch-icon" href="//startups.courses/assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="//startups.courses/assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="mask-icon" href="//startups.courses/favicon.png" color="#ffffff">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <link type="text/css" href="css/all.min.css" rel="stylesheet">
@@ -28,17 +29,17 @@
     <script async src='js/api.js'></script>
 </head>
 
-<body>
+<body oncontextmenu="return false">
     <main>
         <section class="min-vh-100 d-flex bg-primary align-items-center">
             <div class="container py-5">
                 <div class="row align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-sm-9 col-md-8 col-lg-5 mb-5 mb-lg-0"><img class="img-fluid" src="assets/img/maintenance.svg" alt="boy illustration"></div>
+                    <div class="col-12 col-sm-9 col-md-8 col-lg-5 mb-5 mb-lg-0"><img class="img-fluid" src="//startups.courses/assets/img/maintenance.svg" alt="boy illustration"></div>
                     <div class="col-sm-12 col-lg-6">
                         <div class="text-center text-lg-left">
                             <h4 class="mt-4 text-gray">woof!</h4>
                             <h1 class="display-3">We're undergoing a bit of scheduled maintenance</h1>
-                            <p class="lead my-4">Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment.</p><a class="btn btn-primary animate-hover" href="/"><span class="fas fa-chevron-left mr-3 pl-2 animate-left-3"></span>Go back home</a></div>
+                            <p class="lead my-4">Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment.</p><a class="btn btn-primary animate-hover" href="https://startup.courses/"><span class="fas fa-chevron-left mr-3 pl-2 animate-left-3"></span>Go back home</a></div>
                     </div>
                 </div>
             </div>
