--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
                         <div class="text-center text-lg-left">
                             <h4 class="mt-4 text-gray">woof!</h4>
                             <h1 class="display-3">We're undergoing a bit of scheduled maintenance</h1>
-                            <p class="lead my-4">Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment.</p><a class="btn btn-primary animate-hover" href="https://startup.courses/"><span class="fas fa-chevron-left mr-3 pl-2 animate-left-3"></span>Go back home</a></div>
+                            <p class="lead my-4">Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment.</p><a class="btn btn-primary animate-hover" href="https://startups.courses/"><span class="fas fa-chevron-left mr-3 pl-2 animate-left-3"></span>Go back home</a></div>
                     </div>
                 </div>
             </div>
