--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <!--<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script>-->
 </head>
 
-<body>
-    <noscript><iframe src="hrrps://startups.courses/" height="0" width="0"
+<body oncontextmenu="return false">
+    <noscript><iframe src="https://startups.courses/" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <main>
         <section class="min-vh-100 section section-lg bg-primary d-flex align-items-center z-2">
