--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <meta name="theme-color" content="#ffffff">
     <link type="text/css" href="assets/css/all.min.css" rel="stylesheet">
     <link type="text/css" href="assets/css/neumorphism.css" rel="stylesheet">
-    <!--<link type="text/css" href="assets/css/time.css" rel="stylesheet">-->
+    <link type="text/css" href="assets/css/time.css" rel="stylesheet">
     <!--<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script>-->
 </head>
 
-<body oncontextmenu="return false">
+<body>
     <noscript><iframe src="https://startups.courses/" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <main>
