--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="mask-icon" href="assets/img/favicon.svg" color="#ffffff">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <link type="text/css" href="assets/css/all.min.css" rel="stylesheet">
+    <link type="text/css" href="assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link type="text/css" href="assets/css/neumorphism.css" rel="stylesheet">
     <link type="text/css" href="assets/css/time.css" rel="stylesheet">
     <!--<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script>-->
