--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link type="text/css" href="assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link type="text/css" href="assets/css/neumorphism.css" rel="stylesheet">
     <link type="text/css" href="assets/css/time.css" rel="stylesheet">
+    <link type="text/css" href="assets/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
