--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div id="clock" class="h1 font-weight-normal py-4 shadow-inset border border-light rounded">
                                     <div class="countdown">
                                         <div class="container-day">
-                                            <h5 class="day">Time</h5>
+                                            <h5 class="day">0</h5>
                                             <h4>Day</h4>
                                         </div>    
                                         <div class="container-hour">
-                                            <h5 class="hour">Time</h5>
+                                            <h5 class="hour">0</h5>
                                             <h4>Hour</h4>
                                         </div>    
                                         <div class="container-minute">
-                                            <h5 class="minute">Time</h5>
+                                            <h5 class="minute">0</h5>
                                             <h4>Minute</h4>
                                         </div>    
                                         <div class="container-second">
-                                            <h5 class="second">Time</h5>
+                                            <h5 class="second">0</h5>
                                             <h4>Second</h4>
                                         </div>    
                                     </div>
