--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div class="countdown">
                                         <div class="container-day">
                                             <h5 class="day">0</h5>
-                                            <h4>Day</h4>
+                                            <h4>Days</h4>
                                         </div>    
                                         <div class="container-hour">
                                             <h5 class="hour">0</h5>
-                                            <h4>Hour</h4>
+                                            <h4>Hours</h4>
                                         </div>    
                                         <div class="container-minute">
                                             <h5 class="minute">0</h5>
-                                            <h4>Minute</h4>
+                                            <h4>Minutes</h4>
                                         </div>    
                                         <div class="container-second">
                                             <h5 class="second">0</h5>
-                                            <h4>Second</h4>
+                                            <h4>Seconds</h4>
                                         </div>    
                                     </div>
                                 </div>
