--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div class="countdown">
                                         <div class="container-day">
                                             <h5 class="day">0</h5>
-                                            <p class="lead mb-5">Days</p>
+                                            <p class="justify-content-between">Days</p>
                                         </div>    
                                         <div class="container-hour">
                                             <h5 class="hour">0</h5>
-                                            <p class="lead mb-5">Hours</p>
+                                            <p class="justify-content-between">Hours</p>
                                         </div>    
                                         <div class="container-minute">
                                             <h5 class="minute">0</h5>
-                                            <p class="lead mb-5">Minutes</p>
+                                            <p class="justify-content-between">Minutes</p>
                                         </div>    
                                         <div class="container-second">
                                             <h5 class="second">0</h5>
-                                            <p class="lead mb-5">Seconds</p>
+                                            <p class="justify-content-between">Seconds</p>
                                         </div>    
                                     </div>
                                 </div>
