--- a/course-1.html
+++ b/course-1.html
@@ -659,7 +659,7 @@
                   </div>
                 </div>
                 <div>
-                  <!--<form
+                  <form
                     data-node-type="commerce-add-to-cart-form"
                     data-commerce-sku-id="60448c2f31ca2e452d1507b8"
                     data-loading-text="Adding to cart..."
@@ -672,7 +672,7 @@
                       data-loading-text="Adding to cart..."
                       value="Add to Cart"
                       class="w-commerce-commerceaddtocartbutton button-primary full-width-container"
-                    />--><a
+                    /><a
                       href="/"
                       data-node-type="commerce-buy-now-button"
                       data-default-text="Buy now"
@@ -842,7 +842,7 @@
                   </div>
                 </div>
                 <div>
-                  <!--<form
+                  <form
                     data-node-type="commerce-add-to-cart-form"
                     data-commerce-sku-id="60448c2f31ca2e452d1507b8"
                     data-loading-text="Adding to cart..."
@@ -855,7 +855,7 @@
                       data-loading-text="Adding to cart..."
                       value="Add to Cart"
                       class="w-commerce-commerceaddtocartbutton button-primary full-width-container"
-                    />--><a
+                    /><a
                       href="/"
                       data-node-type="commerce-buy-now-button"
                       data-default-text="Buy now"
