--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                     class="home-1-testimonial-item margin-bottom-50-px">
                     <div class="home-1-testimonial-text-wrapper">
                         <div class="text-block _24-px">&quot;I can&#x27;t believe how much easier One Up made formation
-                            of startups. Because of One Up's Fundational Course it was no surprise to my addition that I
+                            of startups. Because of One Up's Foundational Course it was no surprise to my addition that I
                             was much welcomed in the corporate world.&quot;</div>
                     </div>
                     <div class="home-1-testimonial-person">
