--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
             </div>
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
                 data-easing2="ease" role="banner" class="navigation-mob w-nav">
-                <div class="wrapper navbar-wrapper"><a href="/home-1" class="brand w-nav-brand"><img
+                <div class="wrapper navbar-wrapper"><a href="/" class="brand w-nav-brand"><img
                             src="assets/img/logo-white-modified.png" loading="lazy" alt=""
                             class="home-1-people-feedback-image" /></a>
                     <nav role="navigation" class="mobile-nav w-nav-menu">
