--- a/about.html
+++ b/about.html
@@ -299,7 +299,7 @@
                     class="about-1-hero-text">
                     <div class="white">We&#x27;re a squad of startup-focused educators know how to develop viable
                         startups. We&#x27;ve all experienced the chaos of startup guidance which determines the
-                        sustainability of a compay at stake. We built One Up to address
+                        sustainability of a company at stake. We built One Up to address
                         every single one of those problems in creation that a startup could seek - efficient network,
                         operational stability, viablity & fundings.</div>
                 </div>
