--- a/404.html
+++ b/404.html
@@ -30,11 +30,11 @@
     <!-- include the site stylesheet -->
     <link rel="stylesheet" href="assets/css/styles-astronaut.css">
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon.png">
-    <link rel="apple-touch-icon" href="assets/img/favicon.ico">
-    <link rel="shortcut icon" href="assets/img/favicon.svg">
+    <link rel="apple-touch-icon" sizes="144x144" href="//startups.courses/assets/img/favicon.svg">
+    <link rel="apple-touch-icon" sizes="114x114" href="//startups.courses/assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="//startups.courses/assets/img/favicon.png">
+    <link rel="apple-touch-icon" href="//startups.courses/assets/img/favicon.ico">
+    <link rel="shortcut icon" href="//startups.courses/assets/img/favicon.ico">
 
 </head>
 
@@ -79,9 +79,9 @@
     <!-- End Error Page -->
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js" type="text/javascript"></script>
-    <script src="assets/js/snap.svg-min.js" type="text/javascript"></script>
-    <script src="assets/js/scripts.js" type="text/javascript"></script>
+    <script src="https://startups.courses/assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="https://startups.courses/assets/js/snap.svg-min.js" type="text/javascript"></script>
+    <script src="https://startups.courses/assets/js/scripts.js" type="text/javascript"></script>
 
 </body>
 
