--- a/login.html
+++ b/login.html
@@ -21,18 +21,22 @@
         <div class="form-wrapper">
             <h3 class="h3-heading-48px">Log in</h3>
             <div class="register-form-block w-form">
-                <form id="email-form" name="email-form" data-name="Email Form" class="reigster-form-div">
+                <form id="form" name="form" data-name="logIn Form" class="reigster-form-div">
+                    <!--<div class="form-content-wrapper margin-bottom-30px"><label for="name"
+                        class="form-field-label-text">Name</label><input type="text"
+                        class="form-field w-input" maxlength="20" name="name" data-name="name" placeholder="Enter Your Name Here"
+                        id="name" required="" /></div>-->
                     <div class="form-content-wrapper margin-bottom-30px"><label for="email"
                             class="form-field-label-text">Email Address</label><input type="email"
-                            class="form-field w-input" maxlength="256" name="email" data-name="email" placeholder=""
+                            class="form-field w-input" maxlength="50" name="email" data-name="email" placeholder="name@company.com"
                             id="email" required="" /></div>
-                    <div class="form-content-wrapper margin-bottom-30px"><label for="name-2"
+                    <div class="form-content-wrapper margin-bottom-30px"><label for="Passwd"
                             class="form-field-label-text">Password</label><input type="password"
-                            class="form-field w-input" maxlength="256" name="password" data-name="password"
-                            placeholder="" id="password" required="" /></div>
+                            class="form-field w-input" maxlength="50" name="password" data-name="password"
+                            id="password" required="" /></div>
                     <div class="forward-password-text-16px"><a href="password-reset.html" target="_blank"
                             class="forgot-password">Forgot password?</a></div><input type="submit" value="Log in"
-                        data-wait="Please wait..." class="submit-green-button w-button" />
+                        data-wait="Please wait..." class="submit-green-button w-button" onclick="SignIn()"/>
                     <div class="form-text-block-16px"><span class="white-text-opacity-50">Don’t have an
                             account?</span> <a href="register.html" class="register-link">Register</a></div>
                 </form>
@@ -120,10 +124,13 @@
             </div>
         </div>
     </div>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6067703d73e522c2abe4d13a"
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+    <script src="assets/js/forms.js"></script>
+    <!--<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6067703d73e522c2abe4d13a"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>
-    <script src="assets/js/index.js" type="text/javascript"></script>
+        crossorigin="anonymous"></script>-->
+    <!--<script src="assets/js/index.js" type="text/javascript"></script>-->
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
