--- a/register.html
+++ b/register.html
@@ -27,24 +27,24 @@
             <div class="form-wrapper">
                 <h3 class="h3-heading-48px">Register</h3>
                 <div class="register-form-block w-form">
-                    <form id="email-form" name="email-form" data-name="Email Form" class="register-form">
+                    <form id="form" name="form" data-name="form" class="register-form">
                         <div class="form-content-wrapper margin-bottom-30px"><label for="name"
                                 class="form-field-label-text">Full Name</label><input type="text"
-                                class="form-field w-input" maxlength="256" name="name" data-name="Name" placeholder="Your Name"
+                                class="form-field w-input" maxlength="20" name="name" data-name="name" placeholder="Your Name"
                                 id="name" required="" /></div>
-                        <div class="form-content-wrapper margin-bottom-30px"><label for="Phone"
-                                class="form-field-label-text">Phone Number</label><input type="Phone"
-                                class="form-field w-input" maxlength="256" name="Mobile" data-name="Mobile" placeholder="Mobile Number"
-                                id="Mobile" required="" /></div>        
+                        <div class="form-content-wrapper margin-bottom-30px"><label for="phone"
+                                class="form-field-label-text">Phone Number</label><input type="tel"
+                                class="form-field w-input" maxlength="13" name="mobile" data-name="mobile" placeholder="Mobile Number"
+                                id="mobile" required="" /></div>  
                         <div class="form-content-wrapper margin-bottom-30px"><label for="Email"
                                 class="form-field-label-text">Email Address</label><input type="email"
-                                class="form-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="name@company.com"
-                                id="Email" required="" /></div>
+                                class="form-field w-input" maxlength="50" name="email" data-name="email" placeholder="name@company.com"
+                                id="email" required="" /></div>
                         <div class="form-content-wrapper margin-bottom-30px"><label for="Password"
                                 class="form-field-label-text">Password</label><input type="password"
-                                class="form-field w-input" maxlength="256" name="Password" data-name="Password"
-                                placeholder="" id="Password" required="" /></div><input type="submit" value="Register"
-                            data-wait="Please wait..." class="submit-green-button w-button" />
+                                class="form-field w-input" maxlength="50" name="password" data-name="password"
+                                placeholder="" id="password" required="" /></div><input type="submit" value="Register"
+                            data-wait="Please wait..." class="submit-green-button w-button" onclick="UserRegister()" />
                         <div class="form-text-block-16px"><span class="white-text-opacity-50">Already have an
                                 account?</span> <a href="login.html" class="register-link">Log in</a></div>
                     </form>
@@ -52,7 +52,7 @@
                         <div>Thank you! Your submission has been received!</div>
                     </div>
                     <div class="error-message w-form-fail">
-                        <div>Oops! Something went wrong while submitting the form.</div>
+                        <div>Thank you! Your submission has been received!</div>
                     </div>
                 </div>
             </div>
@@ -131,10 +131,13 @@
             </div>
         </div>
     </div>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6067703d73e522c2abe4d13a"
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+    <script src="assets/js/forms.js"></script>
+    <!--<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6067703d73e522c2abe4d13a"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>
-    <script src="assets/js/index.js" type="text/javascript"></script>
+        crossorigin="anonymous"></script>-->
+    <!--<script src="assets/js/index.js" type="text/javascript"></script>-->
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
