--- a/contact.html
+++ b/contact.html
@@ -399,7 +399,7 @@
             <div class="text-block _16-px brown">Learn how to start a company, with help from one of India's most
               credible startup accelerator - One Up</div>
           </div>
-          <a href="mailto:hello@website.com" class="footer-email w-inline-block">
+          <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
             <div class="footer-email-image"><img
                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153af0a42f6ae20c77d_Vector-5.svg"
                 loading="lazy" alt="" class="image contain" /></div>
