--- a/about.html
+++ b/about.html
@@ -356,7 +356,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="team-grid-right">
+                <!--<div class="team-grid-right">
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                         <div class="team-person-image"><img src="assets/img/t3.png" loading="lazy" alt="" class="image">
@@ -367,13 +367,13 @@
                             </div>
                             <div class="team-designation-wrapper">
                                 <div class="text-block medium"><strong><!--Co-Founder &amp;--> CMO</strong></div>
-                            </div>
+                            <!--</div>
                             <div class="team-about-wrapper">
                                 <div class="text-block _16-px brown">An Engineer, creator of electronic water management
                                     systems startup - AQUA. Digital Marketing expert scaling OneUp.</div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                         <div class="team-person-image"><img src="assets/img/t4.png" loading="lazy"
