--- a/about.html
+++ b/about.html
@@ -366,8 +366,8 @@
                                 <h4><strong>Dinnesh Prabhakaran</strong></h4>
                             </div>
                             <div class="team-designation-wrapper">
-                                <div class="text-block medium"><strong><!--Co-Founder &amp;--> CMO</strong></div>
-                            <!--</div>
+                                <div class="text-block medium"><strong><!--Co-Founder &amp;--> <!--CMO</strong></div>
+                            </div>
                             <div class="team-about-wrapper">
                                 <div class="text-block _16-px brown">An Engineer, creator of electronic water management
                                     systems startup - AQUA. Digital Marketing expert scaling OneUp.</div>
