--- a/courses.html
+++ b/courses.html
@@ -332,7 +332,7 @@
                       Pitch Learn, Pitch Build
                     </h3>
                   </div>
-                  <div class="blog-author-and-date-wrapper">
+                  <!--<div class="blog-author-and-date-wrapper">
                     <div class="blog-author-wrapper">
                       <div class="blog-author-image">
                         <img
@@ -348,7 +348,7 @@
                     <div class="text-block _14-px">February, 2022</div>
                   </div>
                 </div></a
-              >
+              >-->
             </div>
           </div>
         </div>
@@ -379,7 +379,7 @@
                     <h5>Business Model Innovation</h5>
                   </div>
                 </div>
-                <div class="blog-down">
+                <!--<div class="blog-down">
                   <div class="blog-author-and-date-wrapper">
                     <div class="blog-author-wrapper">
                       <div class="blog-author-image">
@@ -396,7 +396,7 @@
                     <div class="text-block _14-px">January, 2022</div>
                   </div>
                 </div></a
-              >
+              >-->
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -419,7 +419,7 @@
                     <h5>Entrepreneurial Strategy & Innovation</h5>
                   </div>
                 </div>
-                <div class="blog-down">
+                <!--<div class="blog-down">
                   <div class="blog-author-and-date-wrapper">
                     <div class="blog-author-wrapper">
                       <div class="blog-author-image">
@@ -436,7 +436,7 @@
                     <div class="text-block _14-px">February, 2022</div>
                   </div>
                 </div></a
-              >
+              >-->
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -460,7 +460,7 @@
                     </h5>
                   </div>
                 </div>
-                <div class="blog-down">
+                <!--<div class="blog-down">
                   <div class="blog-author-and-date-wrapper">
                     <div class="blog-author-wrapper">
                       <div class="blog-author-image">
@@ -477,7 +477,7 @@
                     <div class="text-block _14-px">December, 2021</div>
                   </div>
                 </div></a
-              >
+              >-->
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -501,7 +501,7 @@
                     </h5>
                   </div>
                 </div>
-                <div class="blog-down">
+                <!--<div class="blog-down">
                   <div class="blog-author-and-date-wrapper">
                     <div class="blog-author-wrapper">
                       <div class="blog-author-image">
@@ -518,7 +518,7 @@
                     <div class="text-block _14-px">April, 2022</div>
                   </div>
                 </div></a
-              >
+              >-->
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -540,7 +540,7 @@
                     <h5>Entrepreneurial Lessons by Founders</h5>
                   </div>
                 </div>
-                <div class="blog-down">
+                <!--<div class="blog-down">
                   <div class="blog-author-and-date-wrapper">
                     <div class="blog-author-wrapper">
                       <div class="blog-author-image">
@@ -557,7 +557,7 @@
                     <div class="text-block _14-px">April, 2022</div>
                   </div>
                 </div></a
-              >
+              >-->
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -579,7 +579,7 @@
                     <h5>Startup Fast Track: Launch in 90 Days</h5>
                   </div>
                 </div>
-                <div class="blog-down">
+                <!--<div class="blog-down">
                   <div class="blog-author-and-date-wrapper">
                     <div class="blog-author-wrapper">
                       <div class="blog-author-image">
@@ -596,7 +596,7 @@
                     <div class="text-block _14-px">March, 2022</div>
                   </div>
                 </div></a
-              >
+              >-->
             </div>
           </div>
           <div role="navigation" aria-label="List" class="w-pagination-wrapper">
