--- a/courses.html
+++ b/courses.html
@@ -346,9 +346,9 @@
                       <div class="text-block _14-px">Master Subhajit Ghosh</div>
                     </div>
                     <div class="text-block _14-px">February, 2022</div>
-                  </div>
+                  </div>-->
                 </div></a
-              >-->
+              >
             </div>
           </div>
         </div>
@@ -394,9 +394,9 @@
                       <div class="text-block _14-px">Shaik Waseem</div>
                     </div>
                     <div class="text-block _14-px">January, 2022</div>
-                  </div>
+                  </div>-->
                 </div></a
-              >-->
+              >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -434,9 +434,9 @@
                       <div class="text-block _14-px">Shaik Waseem</div>
                     </div>
                     <div class="text-block _14-px">February, 2022</div>
-                  </div>
+                  </div>-->
                 </div></a
-              >-->
+              >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -475,9 +475,9 @@
                       <div class="text-block _14-px">Dinnesh Prabhakaran</div>
                     </div>
                     <div class="text-block _14-px">December, 2021</div>
-                  </div>
+                  </div>-->
                 </div></a
-              >-->
+              >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -516,9 +516,9 @@
                       <div class="text-block _14-px">Master Subhajit Ghosh</div>
                     </div>
                     <div class="text-block _14-px">April, 2022</div>
-                  </div>
+                  </div>-->
                 </div></a
-              >-->
+              >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -555,9 +555,9 @@
                       <div class="text-block _14-px">Master Subhajit Ghosh</div>
                     </div>
                     <div class="text-block _14-px">April, 2022</div>
-                  </div>
+                  </div>-->
                 </div></a
-              >-->
+              >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
               <a
@@ -594,9 +594,9 @@
                       <div class="text-block _14-px">Shaik Waseem</div>
                     </div>
                     <div class="text-block _14-px">March, 2022</div>
-                  </div>
+                  </div>-->
                 </div></a
-              >-->
+              >
             </div>
           </div>
           <div role="navigation" aria-label="List" class="w-pagination-wrapper">
