--- a/courses.html
+++ b/courses.html
@@ -394,8 +394,8 @@
                       <div class="text-block _14-px">Shaik Waseem</div>
                     </div>
                     <div class="text-block _14-px">January, 2022</div>
-                  </div>-->
-                </div></a
+                  </div>
+                </div>--></a
               >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -434,8 +434,8 @@
                       <div class="text-block _14-px">Shaik Waseem</div>
                     </div>
                     <div class="text-block _14-px">February, 2022</div>
-                  </div>-->
-                </div></a
+                  </div>
+                </div>--></a
               >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -475,8 +475,8 @@
                       <div class="text-block _14-px">Dinnesh Prabhakaran</div>
                     </div>
                     <div class="text-block _14-px">December, 2021</div>
-                  </div>-->
-                </div></a
+                  </div>
+                </div>--></a
               >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -516,8 +516,8 @@
                       <div class="text-block _14-px">Master Subhajit Ghosh</div>
                     </div>
                     <div class="text-block _14-px">April, 2022</div>
-                  </div>-->
-                </div></a
+                  </div>
+                </div>--></a
               >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -555,8 +555,8 @@
                       <div class="text-block _14-px">Master Subhajit Ghosh</div>
                     </div>
                     <div class="text-block _14-px">April, 2022</div>
-                  </div>-->
-                </div></a
+                  </div>
+                </div>--></a
               >
             </div>
             <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -594,8 +594,8 @@
                       <div class="text-block _14-px">Shaik Waseem</div>
                     </div>
                     <div class="text-block _14-px">March, 2022</div>
-                  </div>-->
-                </div></a
+                  </div>
+                </div>--></a
               >
             </div>
           </div>
@@ -618,7 +618,7 @@
                   <div class="footer-text">
                       <div class="text-block _16-px brown">Learn how to start a company, with help from one of India's most credible startup accelerator - One Up</div>
                   </div>
-                  <a href="mailto:hello@website.com" class="footer-email w-inline-block">
+                  <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
                       <div class="footer-email-image"><img
                               src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153af0a42f6ae20c77d_Vector-5.svg"
                               loading="lazy" alt="" class="image contain" /></div>
