--- a/page2.html
+++ b/page2.html
@@ -349,7 +349,7 @@
                     One Day Startup Course: Masterclass
                   </h3>
                 </div>
-                <div class="blog-author-and-date-wrapper">
+                <!--<div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
                       <img src="assets/img/t2.png" loading="lazy" alt=""
@@ -359,7 +359,7 @@
                     <div class="text-block _14-px">Shaik Waseem</div>
                   </div>
                   <div class="text-block _14-px">September, 2022</div>
-                </div>
+                </div>-->
               </div>
             </a>
           </div>
@@ -388,7 +388,7 @@
                   </h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -400,7 +400,7 @@
                   </div>
                   <div class="text-block _14-px">March, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -418,7 +418,7 @@
                   <h5>Design-Thinking & Innovation</h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -430,7 +430,7 @@
                   </div>
                   <div class="text-block _14-px">February, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -450,7 +450,7 @@
                   </h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -462,7 +462,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -480,7 +480,7 @@
                   <h5>Learn to Build Lean Canvas</h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -492,7 +492,7 @@
                   </div>
                   <div class="text-block _14-px">January, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -508,7 +508,7 @@
                   <h5>How to Create an MVP?</h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -520,7 +520,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
           <div role="listitem" class="blog-collection-item w-dyn-item">
@@ -538,7 +538,7 @@
                   <h5>Managerial Economics</h5>
                 </div>
               </div>
-              <div class="blog-down">
+              <!--<div class="blog-down">
                 <div class="blog-author-and-date-wrapper">
                   <div class="blog-author-wrapper">
                     <div class="blog-author-image">
@@ -550,7 +550,7 @@
                   </div>
                   <div class="text-block _14-px">April, 2022</div>
                 </div>
-              </div>
+              </div>-->
             </a>
           </div>
         </div>
@@ -573,7 +573,7 @@
                 <div class="footer-text">
                     <div class="text-block _16-px brown">Learn how to start a company, with help from one of India's most credible startup accelerator - One Up</div>
                 </div>
-                <a href="mailto:hello@website.com" class="footer-email w-inline-block">
+                <a href="mailto:info@startups.courses" class="footer-email w-inline-block">
                     <div class="footer-email-image"><img
                             src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153af0a42f6ae20c77d_Vector-5.svg"
                             loading="lazy" alt="" class="image contain" /></div>
